--- a/html/index.html
+++ b/html/index.html
@@ -459,7 +459,7 @@
                     <h2 class="page-title bg-primary">About DevOps Essentials on AWS</h2>
                    <!-- inner body -->
                 <div class="inner-body panel">
-                    <h4 class="sub-heading">Learning Objectives</h4>
+                    <h4 class="sub-heading">Learning Objectives - Suhasini</h4>
                     <p>By the end of this course you will be able to -</p>
                     <ul class="edited-ul">
                         <li>Describe the principles and practices of DevOps on AWS.</li>
